# Prim32

./: .gitignore  CMakeLists.txt  README.md  build.bat
examples/d3d12_demo/: embedded_png.h  main.cpp
include/prim32/: p32prof.h  prim32.h  prim32_dx12.h
scripts/: build_demo.bat
src/: prim32.cpp  prim32_freetype.cpp  prim32_internal.h  prim32_resources.cpp  prim32_state.cpp  prim32_state.h
src/backends/: prim32_dx12.cpp
src/profiler/: p32prof.cpp  p32prof_ui.cpp
tests/: core_tests.cpp
